STUDYspace website/main.css
/* Variables to make using colors easier*/
:root {
  --primary: #FF6347;
  --contrast: #FFFFFF;
  --back: #F7F5F6;
  --default-check: #D5D5D5;
  --back-dark: #1B1B1B;
  --light: #242124;
  --check-dark: #3D3C3A;
}

/* Default CSS for all pages */

* {
  margin: 0;
  padding: 0;
  font-size: 17px;
  box-sizing: border-box;
  font-family: 'Montserrat', sans-serif;
  font-weight: 500;
}

/* Navigation */

.header {
  position: relative;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background: var(--primary);
  padding: 0 25px;
}

.logo a {
  color: var(--contrast);
  display: block;
  width: 100%;
}

.inspan {
  font-weight: 700;
}

.logo a, .logo .inspan {
  font-size: 40px;
  text-decoration: none;
  padding-left: 0px;
}

.navigation {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.menu {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: row;
  z-index: 1;
}

.menu li {
  list-style: none;
}

.menu li a {
  color: var(--contrast);
  text-decoration: none;
  display: block;
  padding: 40px 35px;
  font-size: 20px;
  line-height: 1;
}

.menu li a:hover {
  color: var(--primary);
  background: var(--contrast);
  border-radius: 5px;
  padding: 10px;
  transition-duration: 500ms;
}

.hamburger {
  position: relative;
  width: 30px;
  height: 4px;
  background: var(--contrast);
  z-index: 2;
  cursor: pointer;
  border-radius: 10px;
  transition: 0.2s;
}

.hamburger:before, .hamburger:after {
  content: "";
  position: absolute;
  height: 4px;
  right: 0;
  background: var(--contrast);
  border-radius: 10px;
  transition: 0.2s;
}

.hamburger:before {
  top: -10px;
  width: 30px;
}

.hamburger:after {
  top: 10px;
  width: 30px;
}

.toggle-menu {
  position: absolute;
  width: 30px;
  height: 100%;
  z-index: 3;
  cursor: pointer;
  opacity: 0;
}

.hamburger, .toggle-menu {
  display: none;
}

.navigation input:checked ~ .hamburger {
  background: transparent;
}

.navigation input:checked ~ .hamburger:before {
  top: 0;
  transform: rotate(-45deg);
  width: 30px;
}

.navigation input:checked ~ .hamburger:after {
  top: 0;
  transform: rotate(45deg);
  width: 30px;
}

.navigation input:checked ~ .menu {
  right: 0;
}

.menu .select {
  color: var(--primary);
  background: var(--contrast);
  border-radius: 5px;
  padding: 10px;
}

.navigation .fas {
  margin-right: 9px;
}

/* For span tags */

.inspan, .inspan h2 {
  font-weight: 700;
}

.outspan {
  color: var(--primary);
}

/* Landing page */


.landing {
  background-image: url(temporarylanding.jpg);
  height: 100vh;
  background-size: cover;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.landing h2 {
  font-size: 65px;
  padding: 350px;
  font-weight: 150;
  color: var(--contrast);
}

/* For the textblock classes that is used in all pages */

body {
    background-color: var(--back);
}

.textblock {
  margin: 50px auto;
  max-width: 1200px;
  width: 70%;
}

.textblock h2, h2 span {
  text-align: center;
  padding-top: 120px;
  padding-bottom: 40px;
  font-size: 45px;
}

.textblock h3 {
  text-align: center;
  padding: 50px 0px;
  font-size: 35px;
}

.textblock p {
  text-align: left;
  align-items: center;
  line-height: 1.8;
}

.textblock a {
  text-decoration: none;
}


/* for grid layout on news & download page */
.boxes {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 100px;
  justify-content: center;
  margin: 50px 0;
}

#app, #chrome {
  grid-template-columns: repeat(2, 1fr);
}

.newsbox {
  background: var(--contrast);
  border: 5px solid var(--primary);
  position: relative;
  line-height: 30px;
}

.newsbox a {
  color: var(--contrast);
  background: var(--primary);
  text-decoration: none;
  width: 100%;
  display: block;
  padding: 15px;
  text-align: center;
}

.newsbox a:hover {
  background: var(--contrast);
  color: var(--primary);
  border-bottom: 5px solid var(--primary);
}

.newsbox h4 {
  margin: 20px;
  font-size: 19px;
}

.newsbox p {
  margin: 20px;
  width: 90%;
  font-size: 15px;
}


/* For buttons */

.btn {
  background-color: var(--primary);
  color: var(--contrast);
  border: none;
  padding: 10px 15px;
  border-radius: 3px;
}

/* Checkbox input */

.webcheck {
  border: 5px solid var(--primary);
  height: 200px;
  width: 100%;
  position: relative;
  margin: auto;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: var(--contrast);
  margin-bottom: 50px;
}


.webcheck input[type="checkbox"] {
  -webkit-appearance: none;
  appearance: none;
  width: 70px;
  height: 70px;
  background-color: #d5d5d5;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: space-around;
  border-radius: 3px;
}

.webcheck label {
  font-size: 80px;
  padding-left: 30px;
}

.webcheck input[type="checkbox"]::after {
  font-family: "Font Awesome 5 Free";
  font-weight: 1000;
  font-size: 40px;
  content: "\f00c";
  color: var(--contrast);
  display: none;
}

.webcheck input[type="checkbox"]:hover {
  background-color: #a5a5a5;
}

.webcheck input[type="checkbox"]:checked {
  background-color: var(--primary);
}

.webcheck input[type="checkbox"]:checked:after {
  display: block;
}

/* Timer interactive */

#time {
  height: 300px;
  display: block;
  text-align: center;
}

#time h1 {
  font-size: 100px;
}

.updown .fan {
  color: var(--primary);
  font-size: 40px;
  padding: 10px 45px;
}

#time .btn {
  margin: 0 25px;
}

.sub {
  text-align: center;
  height: 200px;
}

.sub h3 {
  font-size: 30px;
}

.sub p {
  font-size: 15px;
  padding: 10px 5px 30px;

}


input[type="text"] {
  box-sizing: border-box;
  padding: 10px 15px;
  border: 3px solid var(--primary);
}


/* FAQ questions */
.qa {
  margin: 50px auto;
  width: 70%;
}

.question {
  background: var(--contrast);
  border: 5px solid var(--primary);
  padding: 15px;
  margin: 35px 0;
  position: relative;
}

.question h4 {
  padding: 15px;
  font-size: 20px;
}

.question h4 span {
  font-size: 20px;
}

.question .faq {
  color: var(--primary);
  font-size: 30px;
  position: absolute;
  right: 50px;
  top: 30px;
  font-weight: 800;
  cursor: pointer;
}

.textblock form {
  background: var(--contrast);
  padding: 50px 30px;
  width: 100%;
}

.textblock form .half {
  display: flex;
  justify-content: space-between;
}

.textblock form .half .item {
  display: flex;
  flex-direction: column;
  margin-bottom: 35px;
  width: 48%;
}

.textblock form label {
  display: block;
  font-size: 20px;
  margin-bottom: 10px;
  font-weight: 600;
  color: var(--primary);
}

.textblock form .half .item input {
  width: 100%;
  outline: 0;
  border: 3px solid var(--primary);
  padding: 15px;
  height: 50px;
}

.textblock form .full {
  margin-bottom: 25px;
}

.textblock form .full textarea {
  background: var(--contrast);
  border: 3px solid var(--primary);
  outline: none;
  width: 100%;
  height: 150px;
  padding: 20px;
  font-size: 16px;
}

.textblock form .action input {
  background: var(--primary);
  color: var(--contrast);
  padding: 15px 20px;
  border: none;
  cursor: pointer;
  margin-right: 15px;
  border: 2px solid var(--primary);
}

.textblock form .action input:hover {
  background: var(--contrast);
  color: var(--primary);
  border: 2px solid var(--primary);
}

.full .fam, .item .fam {
  font-size: 20px;
  margin-right: 5px;
}



/* Footer */

footer {
  bottom: 0;
  width: 100%;
  font-size: 18px;
  background-color: var(--primary);
  color: var(--contrast);
}

.main-content {
  display: flex;
  margin: 0 25px;
}

.main-content .box {
  flex-basis: 100%;
  padding: 10px 20px;
}

.box .content {
  margin: 20px 0 0 0;
}

.box h3 {
  font-size: 20px;
  font-weight: 600;
  margin-top: 25px;
}

.left .content .social {
  margin: 20px 0 0 0;
}

.left .content p {
  text-align: justify;
}

.left .content .social a {
  padding: 0 5px 0 2px;
  color: var(--contrast);
}

.left .content .social a span {
  height: 40px;
  width: 40px;
  line-height: 40px;
  text-align: center;
  font-size: 20px;
}

.left .content .social a span:hover {
  color: var(--primary);
  background: var(--contrast);
  border-radius: 5px;
  transition-duration: 400ms;
}

.center .content .fan {
  height: 35px;
  width: 35px;
  line-height: 35px;
  text-align: center;
  font-size: 20px;
  cursor: pointer;
}

.center .content .fan:hover {
  color: var(--primary);
  background: var(--contrast);
  border-radius: 5px;
  transition-duration: 400ms;
}

.center .content .text {
  font-size: 16px;
  font-weight: 500;
  padding-left: 5px;
  line-height: 45px;
}

.right form {
  margin-top: 10px;
}

.right form input, .right form textarea {
  width: 100%;
  background: var(--primary);
  padding-left: 10px;
  border: 3px solid var(--contrast);
  color: var(--contrast);
}

.right form input::placeholder {
  color: var(--contrast);
}

.right form input {
  height: 50px;
}

.right form input:focus, .right form textarea:focus {
  outline-color: var(--contrast);
}

.right form .text {
  margin-bottom: 10px;
}

.right form .sign {
  margin-top: 20px;
}

.right form .sign button {
  height: 40px;
  width: 100%;
  border: none;
  background: var(--contrast);
  color: var(--primary);
  font-weight: 500;
  cursor: pointer;
}

.right form .sign button:hover {
  background: var(--primary);
  color: var(--contrast);
  font-weight: 600;
  border: 2px solid var(--contrast);
  transition-duration: 300ms;
}

.bottom {
  padding: 15px 5px;
  font-size: 20px;
  text-align: center;
}


/* Dark-mode */
@media (prefers-color-scheme: dark) {
  body {
    background: var(--back-dark);
  }
  .textblock h2, .textblock h3, .textblock p {
    color: var(--contrast);
  }

  .newsbox, .webcheck, .textblock form, .textblock .half .item input, .textblock form .full textarea, .question {
    background: var(--light);
    color: var(--contrast);
  }

  .newsbox a:hover {
    background: var(--light);
  }

  .webcheck input[type="checkbox"] {
    background-color: var(--check-dark);
  }
}

/* Media Queries */
@media only screen and (max-width: 1200px)  {
  .boxes, #app, #chrome {
    grid-template-columns: 1fr;
    row-gap: 60px;
  }

  .textblock form .action input{
    margin-bottom: 15px;
  }

  footer {
    position: relative;
    bottom: 0;
  }

  .main-content {
    flex-wrap: wrap;
    flex-direction: column;
  }

  .main-content .box {
    margin: 5px 0;
  }

  .hamburger, .toggle-menu {
    display: block;
  }

  .header {
    padding: 25px;
  }

  .menu {
    justify-content: start;
    flex-direction: column;
    align-items: center;
    position: fixed;
    top: 0;
    right: -300px;
    background: var(--primary);
    width: 300px;
    height: 100%;
    padding-top: 65px;
  }

  .menu li {
    width: 100%;
  }

  .menu li a  {
    padding: 30px;
  }

}

